Fixed the Overflow Issue in the Homepage Main Slider

--- a/css/style.sass
+++ b/css/style.sass
@@ -92,6 +92,7 @@ section
 
   .container
     text-align: center;
+    overflow: hidden; 
 
     .swiper-button-prev,
     .swiper-button-next
